クラス分け

--- a/Rabi Laby.csproj
+++ b/Rabi Laby.csproj
@@ -6,4 +6,8 @@
     <EnableDynamicLoading>true</EnableDynamicLoading>
     <RootNamespace>RabiLaby</RootNamespace>
   </PropertyGroup>
+  <ItemGroup>
+    <Compile Remove="backup\**" />
+    <EmbeddedResource Remove="backup\**" />
+  </ItemGroup>
 </Project>
